--- a/index.html
+++ b/index.html
@@ -29,5 +29,11 @@
     </section>
 
     <script src="script.js"></script>
+    <p>
+        <a href="./webGL.html">WebGL Example</a>
+    </p>
+    <p>
+        <a href="">Wordpress (Not Working Yet)</a>
+    </p>
 </body>
 </html>
