--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="./webGL.html">WebGL Example</a>
     </p>
     <p>
-        <a href="">Wordpress (Not Working Yet)</a>
+        <a href="./wordpress">Wordpress</a>
     </p>
 </body>
 </html>
