--- a/webGL.html
+++ b/webGL.html
@@ -196,7 +196,7 @@
     <a href="./index.html">Back To Main Page</a>
 </p>
 <p>
-    <a href="">Wordpress (Not Working Yet)</a>
+    <a href="./wordpress.html">Wordpress</a>
 </p>
 </body>
 </html>
