--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="./webGL.html">WebGL Example</a>
     </p>
     <p>
-        <a href="./wordpress.html">Wordpress</a>
+        <a href="./wp-admin">Wordpress</a>
     </p>
 </body>
 </html>
